--- a/working/index.html
+++ b/working/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio 1</title>
+    <title>Portfolio</title>
     <link rel="shortcut icon" href="./asset/img/cv.png" type="image/x-icon">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
@@ -45,7 +45,7 @@
                     <li class="nav_item"><a href="#qualification" class="nav_link">Qualification</a></li>
                     <li class="nav_item"><a href="#skills" class="nav_link">Skills</a></li>
                     <li class="nav_item"><a href="#portfolio" class="nav_link">Portfolio</a></li>
-                    <li class="nav_item"><a href="#toy" class="nav_link">Toy Projects</a></li>
+                    <!-- <li class="nav_item"><a href="#toy" class="nav_link">Toy Projects</a></li> -->
                     <li class="nav_item"><a href="#activities" class="nav_link">Activities</a></li>
                 </ul>
             </div>
@@ -90,12 +90,19 @@
             <div class="about_container bd-grid">
                 <div class="about_data bd-grid">
                     <p class="about_description">
-                        <span>
-                            안녕하세요</br>
-                            저는 K8S 등 기술뿐만 아니라 사람들과 소통하며 성장하는 것을 즐기는 개발자입니다..</br>
-                            팀원들과 함께 협업하며, 최상의 결과를 내도록 하겠습니다.</br>
+                        <span class="about_description_content">안녕하세요, 사용자를 위해 끊임없이 성장하는 개발자입니다.</br></span>
+                        <span class="about_description_sub_content">
+                            자동화 프로그램 개발을 통해 타학과 교수님의 연구기간을 '6개월'에서 '1초로' 단축, 국방부 데이터센터에서 근무경험을 바탕으로 학과 컴퓨터실의 네트워크 개선시킨
+                            경험이 있습니다.</br>최근에는 삼성청년SW아카데미에서 Spring, gitOps, Jira, AWS 클라우드, 쿠버네티스 등의 기술 적용을 통해 능력있는 개발자가
+                            되도록 노력했습니다.</br>
+                            앞으로도 다양한 기술 습득 및 적용을 통해, 프로젝트를 발전시키는 개발자가 되겠습니다.
                         </span>
                     </p>
+
+                    <div>
+                        <span class="about_number">Kubernetes</span>
+                        <span class="about_achievement">My Recent Field of Interest</span>
+                    </div>
 
                     <div>
                         <span class="about_number">1.8</span>
@@ -108,7 +115,7 @@
                     </div>
 
                     <div>
-                        <span class="about_number">01</span>
+                        <span class="about_number">02</span>
                         <span class="about_achievement">Best work awards</span>
                     </div>
                 </div>
@@ -165,13 +172,88 @@
 
                             <div class="qualification_box">
                                 <span class="qualification_work">
-                                    <i class="fa-solid fa-briefcase qualification-icon"></i>
+                                    <i class="fa-sharp fa-solid fa-building-columns"></i>
                                     안동대학교
                                 </span>
 
                                 <span class="qualification_work">
                                     <i class="fa-solid fa-calendar-days"></i>
                                     Mar 2015 ~ Dec 2021
+                                </span>
+                            </div>
+                        </div>
+                        <div class="qualification_data">
+                            <h3 class="qualification_area">삼성청년SW아카데미</h3>
+
+                            <div class="qualification_box">
+                                <span class="qualification_work">
+                                    <i class="fa-sharp fa-solid fa-building-columns"></i>
+                                    삼성전자주식회사
+                                </span>
+
+                                <span class="qualification_work">
+                                    <i class="fa-solid fa-calendar-days"></i>
+                                    Jul 2022 ~ Aug 2023
+                                </span>
+                            </div>
+                        </div>
+                        <div class="qualification_data">
+                            <h3 class="qualification_area">DNA 중심 SW서비스 전문가 양성교육</h3>
+
+                            <div class="qualification_box">
+                                <span class="qualification_work">
+                                    <i class="fa-sharp fa-solid fa-building-columns"></i>
+                                    안동대학교 산업협력단
+                                </span>
+
+                                <span class="qualification_work">
+                                    <i class="fa-solid fa-calendar-days"></i>
+                                    Oct 2019 ~ Dec 2019
+                                </span>
+                            </div>
+                        </div>
+                        <div class="qualification_data">
+                            <h3 class="qualification_area">R Shiny를 이용한 웹 어플리케이션 개발</h3>
+
+                            <div class="qualification_box">
+                                <span class="qualification_work">
+                                    <i class="fa-sharp fa-solid fa-building-columns"></i>
+                                    안동대학교 SW중심대학사업단
+                                </span>
+
+                                <span class="qualification_work">
+                                    <i class="fa-solid fa-calendar-days"></i>
+                                    Oct 2019 ~ Nov 2019
+                                </span>
+                            </div>
+                        </div>
+                        <div class="qualification_data">
+                            <h3 class="qualification_area">SW산업인력육성교육</h3>
+
+                            <div class="qualification_box">
+                                <span class="qualification_work">
+                                    <i class="fa-sharp fa-solid fa-building-columns"></i>
+                                    경북SW융합클러스터
+                                </span>
+
+                                <span class="qualification_work">
+                                    <i class="fa-solid fa-calendar-days"></i>
+                                    Sep 2019 ~ Nov 2019
+                                </span>
+                            </div>
+                        </div>
+                        <div class="qualification_data">
+                            <h3 class="qualification_area">R을 활용한 빅데이터 분석 전문가 양성 과정</h3>
+
+                            <div class="qualification_box">
+                                <span class="qualification_work">
+                                    <i class="fa-sharp fa-solid fa-building-columns"></i>
+                                    KFQ 한국품질재단
+                                </span>
+
+                                <span class="qualification_work">
+                                    <i class="fa-solid fa-calendar-days"></i>
+                                    Sep 2019 ~ Sep 2019
                                 </span>
                             </div>
                         </div>
@@ -191,37 +273,37 @@
                 <div class="skills_data">
                     <i class="fa-solid fa-code skills_icon"></i>
                     <h2 class="pontentiality_title">Languages</h2>
-                    <div class="skills_description">C/C++, Java, Python, CSS/SCSS, Javascript</div>
+                    <div class="skills_description">C/C++, Java, Python
+
+                        </br>Spring/Spring boot, JSP, JSTL, Servlet, Mysql, JPA, Elasticsearch
+                        </br>Qt, Vue.js, Javascript, CSS/SCSS
+                    </div>
                 </div>
 
 
-                <div class="skills_data">
-                    <i class="fa-solid fa-palette skills_icon"></i>
-                    <h2 class="pontentiality_title">Framework</h2>
-                    <div class="skills_description">Qt, Spring/Spring boot, Vue.js</div>
-                </div>
 
 
                 <div class="skills_data">
-                    <i class="fa-solid fa-palette skills_icon"></i>
-                    <h2 class="pontentiality_title">Infra</h2>
-                    <div class="skills_description">Docker & Docker-compose, Spring Cloud, NGINX, Kubernetes, GCP</div>
-                </div>
-
-                <div class="skills_data">
-                    <i class="fa-solid fa-tv skills_icon"></i>
-                    <h2 class="pontentiality_title">Web development</h2>
-                    <p class="skills_description">Backend with Spring, JSP, JSTL, Servlet, Mysql, JPA, Elastic Search
-                    </p>
-                    <p class="skills_description">Frontend with HTML, Javascript, SCSS, Vue.js</p>
+                    <i class="fa-solid fa-infinity skills_icon"></i>
+                    <h2 class="pontentiality_title">Devops</h2>
+                    <div class="skills_description">
+                        Docker, Docker-compose, Kubernetes & Karpenter</br>
+                        CI/CD (Jenkins, Gitlab Runner, Argo CD), gitOps</br>
+                        Spring Cloud (Eureka Server, Gateway), NGINX</br>
+                        AWS, GCP, Azure
+                        IaC(Terraform)
+                    </div>
                 </div>
 
                 <div class="skills_data">
                     <i class="fa-solid fa-gears skills_icon"></i>
                     <h2 class="pontentiality_title">Embeded System</h2>
-                    <p class="skills_description">Raspberry pi & Arduino - 드론, 스마트팜 제작 경험</p>
-                    <p class="skills_description">MCU - AT89S52 제어경험</p>
-                    <p class="skills_description">리눅스 디바이스 드라이버 제작 경험</p>
+                    <p class="skills_description">
+                        Arduino, Raspberry Pi</br>
+                        AT89S52 Microprocessor, MCU Unit control</br>
+                        I2C, SPI, UART(Serial), GPIO control</br>
+                        IoT, smartFarm</br>
+                    </p>
                 </div>
             </div>
         </section>
@@ -243,7 +325,6 @@
 
 
             <div class="portfolio_container bd-grid">
-
 
                 <div class="portfolio_content mix web">
                     <div class="portfolio_data">
