rewrite : main github url

--- a/working/index.html
+++ b/working/index.html
@@ -72,7 +72,7 @@
                     <a href="https://www.ssafy.com/ksp/jsp/swp/swpMain.jsp" class="home_social-icon"><img width="25px"
                             src="asset/img/mob_ssafy_logo_blue.png" alt=""
                             style="display: inline;margin-right: -5px;"></a>
-                    <a href="https://github.com/IT-magician/SSAFY_CRAFTS" class="home_social-icon"><i
+                    <a href="https://github.com/IT-magician" class="home_social-icon"><i
                             class="fa-brands fa-github"></i></a>
                     <a href="https://blog.naver.com/hoan123432/221112383536" class="home_social-icon"><i
                             class="fa-solid fa-n"></i></a>
