rewrite : main github url

--- a/working/index.html
+++ b/working/index.html
@@ -302,9 +302,10 @@
                     <i class="fa-solid fa-gears skills_icon"></i>
                     <h2 class="pontentiality_title">Embeded System</h2>
                     <p class="skills_description">
-                        Arduino, Raspberry Pi, Qt</br>
+                        Arduino, Raspberry Pi</br>
                         AT89S52 Microprocessor, MCU Unit control</br>
                         I2C, SPI, UART(Serial), GPIO control</br>
+                        Qt</br>
                         IoT, smartFarm</br>
                     </p>
                 </div>
