rewrite: playground 프로젝트 layout 변경

--- a/working/index.html
+++ b/working/index.html
@@ -92,9 +92,11 @@
                     <p class="about_description">
                         <span class="about_description_content">안녕하세요, 사용자를 위해 끊임없이 성장하는 개발자입니다.</br></span>
                         <span class="about_description_sub_content">
-                            자동화 프로그램 개발을 통해 타학과 교수님의 연구기간을 '6개월'에서 '1초로' 단축, 국방부 데이터센터에서 근무경험을 바탕으로 학과 컴퓨터실의 네트워크 개선시킨
-                            경험이 있습니다.</br>최근에는 삼성청년SW아카데미에서 Spring, gitOps, Jira, AWS 클라우드, 쿠버네티스 등의 기술 적용을 통해 능력있는 개발자가
-                            되도록 노력했습니다.</br>
+                            어렸을 때, 네이버 블로그 등을 읽으며 쌓아왔던 IT지식으로 주변 지인들을 도왔을 때, 느꼈던 짜릿함이 능력있는 개발자가 되고자 결심을 했습니다.</br>
+                            자동화 프로그램 개발('타학과 교수님의 연구기간을 '6개월'에서 '1초로' 단축'), 국방부 데이터센터에서 근무경험 활용('학과 컴퓨터실의 네트워크 개선') 등의
+                            활동이력이 있습니다.</br>
+                            최근에는 삼성청년SW아카데미에서 Spring, gitOps, Jira, AWS 클라우드, 쿠버네티스 등의 기술 적용을 통해 능력있는 개발자가 되도록
+                            노력했습니다.</br>
                             앞으로도 다양한 기술 습득 및 적용을 통해, 프로젝트를 발전시키는 개발자가 되겠습니다.
                         </span>
                     </p>
@@ -333,7 +335,7 @@
                 <div class="portfolio_content mix web">
                     <div class="portfolio_data">
                         <span class="portfolio_subtitle">Web development</span>
-                        <h2 class="portfolio_title">Vuddy</h2>
+                        <h2 class="portfolio_title">Vuddy (삼성청년SW아카데미 자율프로젝트)</h2>
                         <input type="checkbox" id="detail14">
                         <label for="detail14" class="button label">View Details</label>
                     </div>
@@ -569,7 +571,7 @@
                 <div class="portfolio_content mix web">
                     <div class="portfolio_data">
                         <span class="portfolio_subtitle">Web development</span>
-                        <h2 class="portfolio_title">Eighteen</h2>
+                        <h2 class="portfolio_title">Eighteen (삼성청년SW아카데미 특화프로젝트)</h2>
                         <input type="checkbox" id="detail13">
                         <label for="detail13" class="button label">View Details</label>
                     </div>
@@ -795,7 +797,7 @@
                 <div class="portfolio_content mix web">
                     <div class="portfolio_data">
                         <span class="portfolio_subtitle">Web development</span>
-                        <h2 class="portfolio_title">Playground</h2>
+                        <h2 class="portfolio_title">Playground (삼성청년SW아카데미 공통프로젝트)</h2>
                         <input type="checkbox" id="detail12">
                         <label for="detail12" class="button label">View Details</label>
                     </div>
@@ -832,9 +834,48 @@
                                 <h4>기여도</h4>
                                 <ol>
                                     35%
-                                    </br>제가 사용했던 Spring Cloud, Flutter 등의 다양한 기술을 짧은 시간내에 적절하게 사용한 점을, 담당 컨설턴트님으로부터 높게
+                                    </br>담당 컨설턴트님으로부터 제가 사용했던 Spring Cloud, Flutter 등의 다양한 기술을 짧은 시간내에 적절하게 사용한
+                                    점을, 높게
                                     평가받아서 후보로 올라감. 발표내용도 사용기술에 대해 중점으로
                                     어필을 해서 3위에서 1위로 최종평가를 받음
+                                </ol>
+                            </li>
+                            <li>
+                                <h4>구성원</h4>
+                                본인 외 5명
+                            </li>
+                            <li>
+                                <h4>담당 역할</h4>
+
+                                <ol>
+                                    <i class="fa-regular fa-keyboard portfolio-icon"></i>
+                                    <div class="portfolio-item-text">
+                                        MSA 아키텍처 설계 및 구축
+                                    </div>
+                                </ol>
+                                <ol>
+                                    <i class="fa-regular fa-keyboard portfolio-icon"></i>
+                                    <div class="portfolio-item-text">
+                                        무중단 CI/CD 배포
+                                    </div>
+                                </ol>
+                                <ol>
+                                    <i class="fa-regular fa-keyboard portfolio-icon"></i>
+                                    <div class="portfolio-item-text">
+                                        React 웹 프레임워크가 앱애서 실행될 수 있도록, Hybrid App 제작
+                                    </div>
+                                </ol>
+                                <ol>
+                                    <i class="fa-regular fa-keyboard portfolio-icon"></i>
+                                    <div class="portfolio-item-text">
+                                        Firebase Cloud Message 백엔드 작성 및 FE 가이드
+                                    </div>
+                                </ol>
+                                <ol>
+                                    <i class="fa-regular fa-keyboard portfolio-icon"></i>
+                                    <div class="portfolio-item-text">
+                                        OAUTH2 기반 카카오 소셜 인증 및 사용자 정보 서비스 백엔드 작성
+                                    </div>
                                 </ol>
                             </li>
                             <li>
@@ -878,6 +919,13 @@
                                 <ol>
                                     <i class="fa-regular fa-keyboard portfolio-icon"></i>
                                     Spring Cloud(Eureka Server/Service Discovery, Gateway)
+                                </ol>
+                                <ol>
+                                    <i class="fa-regular fa-keyboard portfolio-icon"></i>
+
+                                    <div class="portfolio-item-text">
+                                        AWS EC2
+                                    </div>
                                 </ol>
                                 <ol>
                                     <i class="fa-regular fa-keyboard portfolio-icon"></i>
@@ -1045,105 +1093,6 @@
                                     </div>
                                 </ol>
 
-                            </li>
-                            <li>
-                                <h4>사용한 기술</h4>
-
-
-                                <ol>
-                                    <i class="fa-regular fa-keyboard portfolio-icon"></i>
-
-                                    <div class="portfolio-item-text">
-                                        Spring Boot
-                                    </div>
-                                </ol>
-                                <ol>
-                                    <i class="fa-regular fa-keyboard portfolio-icon"></i>
-
-                                    <div class="portfolio-item-text">
-                                        MySQL
-                                    </div>
-                                </ol>
-                                <ol>
-                                    <i class="fa-regular fa-keyboard portfolio-icon"></i>
-
-                                    <div class="portfolio-item-text">
-                                        Spring Data JPA
-                                    </div>
-                                </ol>
-                                <ol>
-                                    <i class="fa-regular fa-keyboard portfolio-icon"></i>
-
-                                    <div class="portfolio-item-text">
-                                        Docker & Docker-compose
-                                    </div>
-                                </ol>
-                                <ol>
-                                    <i class="fa-regular fa-keyboard portfolio-icon"></i>
-
-                                    <div class="portfolio-item-text">
-                                        Spring Cloud(Gateway, Eureka Server)
-                                    </div>
-                                </ol>
-                                <ol>
-                                    <i class="fa-regular fa-keyboard portfolio-icon"></i>
-
-                                    <div class="portfolio-item-text">
-                                        AWS EC2
-                                    </div>
-                                </ol>
-                                <ol>
-                                    <i class="fa-regular fa-keyboard portfolio-icon"></i>
-
-                                    <div class="portfolio-item-text">
-                                        Jenkins
-                                    </div>
-                                </ol>
-                                <ol>
-                                    <i class="fa-regular fa-keyboard portfolio-icon"></i>
-
-                                    <div class="portfolio-item-text">
-                                        Git & Gitlab
-                                    </div>
-                                </ol>
-                            </li>
-                            <li>
-                                <h4>구성원</h4>
-                                본인 외 5명
-                            </li>
-                            <li>
-                                <h4>담당 역할</h4>
-
-                                <ol>
-                                    <i class="fa-regular fa-keyboard portfolio-icon"></i>
-                                    <div class="portfolio-item-text">
-                                        MSA 아키텍처 설계 및 구축
-                                    </div>
-                                </ol>
-                                <ol>
-                                    <i class="fa-regular fa-keyboard portfolio-icon"></i>
-                                    <div class="portfolio-item-text">
-                                        무중단 CI/CD 배포
-                                    </div>
-                                </ol>
-                                <ol>
-                                    <i class="fa-regular fa-keyboard portfolio-icon"></i>
-                                    <div class="portfolio-item-text">
-                                        React 웹 프레임워크가 앱애서 실행될 수 있도록, Hybrid App 제작
-                                    </div>
-                                </ol>
-                                <ol>
-                                    <i class="fa-regular fa-keyboard portfolio-icon"></i>
-                                    <div class="portfolio-item-text">
-                                        Firebase Cloud Message 백엔드 작성 및 FE 가이드
-                                    </div>
-                                </ol>
-                                <ol>
-                                    <i class="fa-regular fa-keyboard portfolio-icon"></i>
-                                    <div class="portfolio-item-text">
-                                        OAUTH2 기반 카카오 소셜 인증 및 사용자 정보 서비스 백엔드 작성
-                                    </div>
-                                </ol>
                             </li>
 
                             <li style="width: 100%;height: var(--scroll--mb);visibility: hidden;"></li>
@@ -3210,10 +3159,10 @@
                 <p class="footer_description">I am Taehun Kim and this is my personal self-introduction web-site</p>
 
                 <div class="footer_social">
-                    <a href="https://github.com/IT-magician/SSAFY_CRAFTS" class="footer_link">
+                    <a href="https://github.com/IT-magician" class="footer_link">
                         <i class="fa-brands fa-github"></i>
                     </a>
-                    <a href="https://blog.naver.com/hoan123432/221112383536" class="footer_link">
+                    <a href="https://blog.naver.com/hoan123432" class="footer_link">
                         <i class="fa-solid fa-n"></i>
                     </a>
                 </div>
