--- a/working/index.html
+++ b/working/index.html
@@ -3102,7 +3102,7 @@
                     <div class="activities_content swiper-slide">
                         <img src="asset/img/sssafy.png" alt="" class="activities_img">
                         <h3 class="activities_title">삼성청년소프트웨어아카데미</h3>
-                        <span class="activities_client">22.07 ~ 현재</span>
+                        <span class="activities_client">22.07 ~ 23.06</span>
                         <p class="activities_description">
                             신입으로써 요구되는 역량은 다양한 경험이라고 들어왔고,
                             </br>저에게 부족한 웹 개발경험을 SSAFY를 통해 JSP, Spring, Vue 등의 웹 개발 기술을 익혀나가고 있습니다.
@@ -3112,7 +3112,7 @@
                     <div class="activities_content swiper-slide">
                         <img src="asset/img/study.PNG" alt="" class="activities_img">
                         <h3 class="activities_title">코딩테스트 스터디</h3>
-                        <span class="activities_client">22.05 ~ 현재</span>
+                        <span class="activities_client">22.05 ~ 23.07</span>
                         <p class="activities_description">현직자(데엔 개발자, SK, 카카오 등)와 취업준비생으로 이루어진 그룹이며, 매주 7문제를 최소 4개이상 푸는
                             스터디입니다.</br>(난이도는 '골드'를 대상으로 풀고, 22년 하반기 라인, 카카오 코테를 합격하는데 도움이 되었던 것 같습니다. 물론... 운이 따라준것도 있긴
                             할겁니다...)</p>
@@ -3121,7 +3121,7 @@
                     <div class="activities_content swiper-slide">
                         <img src="asset/img/award1.jpg" alt="" class="activities_img">
                         <h3 class="activities_title">삼성청년SW아카데미 수상</h3>
-                        <span class="activities_client">22.05 ~ 현재</span>
+                        <span class="activities_client">23.01 ~ 23.02</span>
                         <p class="activities_description">삼성청년SW아카데미 공통프로젝트 전국 본선 진출 및 1등 수상</p>
                     </div>
 
