--- a/working/index.html
+++ b/working/index.html
@@ -3106,6 +3106,7 @@
                         <p class="activities_description">
                             신입으로써 요구되는 역량은 다양한 경험이라고 들어왔고,
                             </br>저에게 부족한 웹 개발경험을 SSAFY를 통해 JSP, Spring, Vue 등의 웹 개발 기술을 익혀나가고 있습니다.
+                            </br>그 결과로 AWS, JSP 및 Spring 백엔드 개발, 도커 및 쿠버네티스, CI/CD 기술습득을 했습니다. 뿐만 아니라 학부생때와 다르게 역할을 협의하며 공동의 목표를 달성하는 팀워크 능력을 향상시켰습니다.
                         </p>
                     </div>
 
